add pattern Dto book, modelMapper