@@ -1,85 +1,82 @@
 package com.library.bookstore.service;
 
-import com.library.bookstore.constants.BookConstants;
+
 import com.library.bookstore.dto.AuthorDto;
-import com.library.bookstore.entity.Book;
 import com.library.bookstore.execptions.*;
-import com.library.bookstore.mapper.AuthorMapper;
 import com.library.bookstore.repository.AuthorRepository;
 import com.library.bookstore.entity.Author;
-import com.library.bookstore.repository.BookRepository;
-import jakarta.transaction.Transactional;
-import lombok.AllArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.StreamSupport;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class AuthorService {
-    @Autowired
-    private  AuthorRepository authorRepository;
-    @Autowired
-    private  BookService bookService;
 
-    public void createAuthor(AuthorDto authorDto){
-        Author author = AuthorMapper.mapToAuthor(authorDto, new Author());
-        authorRepository.save(author);
+    private final AuthorRepository authorRepository;
+
+    private final ModelMapper modelMapper;
+
+    // create author
+    @Transactional
+    public AuthorDto createAuthor(AuthorDto authorDto){
+
+        // convert PostDto to entity Post
+        Author author = modelMapper.map(authorDto, Author.class);
+        //
+        Author newAuthor = authorRepository.save(author);
+        // convert entity to postDto
+        AuthorDto authorResponse = modelMapper.map(newAuthor, AuthorDto.class);
+
+        return authorResponse;
     }
 
-    public List<Author> getAllAuthor(){
-        return StreamSupport
-                .stream(authorRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+    // get all author
+    @Transactional(readOnly = true)
+    public List<AuthorDto> getAllAuthor(){
+        List<Author> authors = authorRepository.findAll();
+        // TODO: 02/01/2024 change AuthorMapper to modelMapper and install Sonar
+        return authors.stream().map((author) -> modelMapper.map(author, AuthorDto.class)).toList();
+    }
+    // todo dans change method de service
+
+    // TODO: 02/01/2024 Change ModelMapper to Mapstruct
+
+    @Transactional(readOnly = true)
+    public AuthorDto getAuthorById(Long id) {
+        Author author = authorRepository.findById(id).orElseThrow(
+                () -> new RessourceNotFoundException("Could not find Author with id : "+id));
+        return modelMapper.map(author, AuthorDto.class);
     }
 
-    public Author getAuthorById(Long id) {
-        return authorRepository.findById(id).orElseThrow(() ->
+    @Transactional
+    public AuthorDto updateAuthor(AuthorDto authorDto, Long id){
+
+        // get post by id from database
+        Author author = authorRepository.findById(id).orElseThrow(() ->
                 new AuthorNotFoundException(id));
-    }
 
-    public Author deleteAuthor(Long id){
-        Author author = getAuthorById(id);
-        authorRepository.deleteById(id);
-        return author;
-    }
+        author.setFirstName(authorDto.getFirstName());
+        author.setLastName(authorDto.getLastName());
+        author.setBirthDate(authorDto.getBirthDate());
+        author.setEmail(authorDto.getEmail());
+        author.setBiography(authorDto.getBiography());
 
+        Author updateAuthor = authorRepository.save(author);
+
+        return modelMapper.map(updateAuthor, AuthorDto.class);
+    }
     @Transactional
-    public void editAuthor(Long id, Author TheAuthor) throws RessourceNotFoundException {
-        Optional<Author> authorWithId = authorRepository.findById(id);
-        if(authorWithId.isPresent()){
-            Author authorToEdit = authorWithId.get();
-            authorToEdit.setBiography(TheAuthor.getBiography() !=null ? TheAuthor.getBiography() : authorToEdit.getBiography());
-            authorToEdit.setFirstName(TheAuthor.getFirstName() !=null ? TheAuthor.getFirstName() : authorToEdit.getFirstName());
-            authorToEdit.setLastName(TheAuthor.getLastName() !=null ? TheAuthor.getLastName() : authorToEdit.getLastName());
-            authorToEdit.setBirthDate(TheAuthor.getBirthDate() !=null ? TheAuthor.getBirthDate() : authorToEdit.getBirthDate());
-            authorRepository.save(authorToEdit);
-        }
+    public void deleteAuthorById(Long id){
+        Author author = authorRepository.findById(id).orElseThrow(() ->
+                new AuthorNotFoundException(id));
+        authorRepository.delete(author);
+
     }
 
-    @Transactional
-    public Author addBookToAuthor(Long authorId, Long bookId){
-        Author author = getAuthorById(authorId);
-        Book book = bookService.getBookById(bookId);
-        if(Objects.nonNull(book.getAuthor())){
-            throw new BookAlreadyExistException(bookId, book.getAuthor().getId());
-        }
-        author.getBooks().add(book);
-        return author;
-    }
-
-    @Transactional
-    public Author removeBookFromAuthor(Long authorId, Long bookId){
-        Author author = getAuthorById(authorId);
-        Book book = bookService.getBookById(bookId);
-        author.getBooks().remove(book);
-        return author;
-    }
 }
 
